--- a/assets/bootstrap.css
+++ b/assets/bootstrap.css
@@ -1,67 +1,1 @@
-.rc-tabs {
-  outline: none;
-}
-.rc-tabs-nav {
-  box-sizing: border-box;
-  border-bottom: 1px solid #ddd;
-}
-.rc-tabs-tabpane-hidden {
-  display: none;
-}
-.rc-tabs-nav {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-}
-.rc-tabs-nav {
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-.rc-tabs-nav:before,
-.rc-tabs-nav:after {
-  display: table;
-  content: " ";
-  box-sizing: border-box;
-}
-.rc-tabs-nav:after {
-  clear: both;
-}
-.rc-tabs-nav > li {
-  float: left;
-  margin-bottom: -1px;
-}
-.rc-tabs-nav > li {
-  position: relative;
-  display: block;
-}
-.rc-tabs-nav > li.rc-tabs-tab-active > a,
-.rc-tabs-nav > li.rc-tabs-tab-active > a:hover,
-.rc-tabs-nav > li.rc-tabs-tab-active > a:focus {
-  color: #555;
-  cursor: default;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-bottom-color: transparent;
-  text-decoration: none;
-}
-.rc-tabs-nav > li > a {
-  margin-right: 2px;
-  line-height: 1.42857143;
-  border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
-  text-decoration: none;
-}
-.rc-tabs-nav > li > a {
-  position: relative;
-  display: block;
-  padding: 10px 15px;
-}
-.rc-tabs-nav > li > a:hover {
-  border-color: #eee #eee #ddd;
-  cursor: pointer;
-}
-.rc-tabs-nav > li > a:hover,
-.rc-tabs-nav > li > a:focus {
-  text-decoration: none;
-  background-color: #eee;
-}
+.rc-tabs{outline:none}.rc-tabs-nav{box-sizing:border-box;border-bottom:1px solid #ddd}.rc-tabs-tabpane-hidden{display:none}.rc-tabs-nav{padding-left:0;margin-bottom:0;list-style:none}.rc-tabs-nav{margin-top:0;margin-bottom:10px}.rc-tabs-nav:before,.rc-tabs-nav:after{display:table;content:" ";box-sizing:border-box}.rc-tabs-nav:after{clear:both}.rc-tabs-nav>li{float:left;margin-bottom:-1px}.rc-tabs-nav>li{position:relative;display:block}.rc-tabs-nav>li.rc-tabs-tab-active>a,.rc-tabs-nav>li.rc-tabs-tab-active>a:hover,.rc-tabs-nav>li.rc-tabs-tab-active>a:focus{color:#555;cursor:default;background-color:#fff;border:1px solid #ddd;border-bottom-color:transparent;text-decoration:none}.rc-tabs-nav>li>a{margin-right:2px;line-height:1.42857143;border:1px solid transparent;border-radius:4px 4px 0 0;text-decoration:none}.rc-tabs-nav>li>a{position:relative;display:block;padding:10px 15px}.rc-tabs-nav>li>a:hover{border-color:#eee #eee #ddd;cursor:pointer}.rc-tabs-nav>li>a:hover,.rc-tabs-nav>li>a:focus{text-decoration:none;background-color:#eee}
