--- a/assets/index.less
+++ b/assets/index.less
@@ -10,6 +10,14 @@
   border-bottom: 2px solid #f3f3f3;
   position: relative;
 
+  @font-face {
+    font-family: 'iconfont';
+    src: url('//at.alicdn.com/t/font_1429685559_5814753.eot');
+    /* IE9*/
+    src: url('//at.alicdn.com/t/font_1429685559_5814753.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/font_1429685559_5814753.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/font_1429685559_5814753.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/font_1429685559_5814753.svg#iconfont') format('svg');
+    /* iOS 4.1- */
+  }
+
   &-ink-bar {
     z-index: 1;
     position: absolute;
@@ -44,16 +52,76 @@
     border-bottom: 2px solid #f3f3f3;
   }
 
+  &-tab-prev, &-tab-next {
+    user-select: none;
+    -webkit-user-select: none;
+    z-index: 1;
+    margin-right: -2px;
+    width: 32px;
+    height: 100%;
+    line-height: 36px;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    position: absolute;
+
+    &-icon {
+      position: relative;
+      display: inline-block;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      line-height: inherit;
+      vertical-align: baseline;
+      text-align: center;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      -webkit-text-stroke-width: 0px;
+      -moz-osx-font-smoothing: grayscale;
+      font-family: sans-serif;
+
+      &:before {
+        display: block;
+        font-family: "iconfont" !important;
+      }
+    }
+  }
+
+  &-tab-next {
+    right: 2px;
+
+    &-icon:before {
+      content: "\e651";
+    }
+  }
+
+  &-tab-prev {
+    left: 0;
+    transform: rotate(180deg);
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+    &-icon:before {
+      content: "\e651";
+    }
+  }
+
+  &-nav-wrap {
+    width: 100%;
+    overflow: hidden;
+  }
+
+  &-nav-scroll {
+    width:99999px;
+  }
+
   &-nav {
     height: 36px;
-    width: 99999px;
     box-sizing: border-box;
     padding-left: 0;
     transition: left 0.5s @easing-in-out;
-    left: 0;
-    top: 0;
+    position: relative;
     margin: 0;
     list-style: none;
+    display: inline-block;
 
     &:before, &:after {
       display: table;
