update bootstrap style

--- a/assets/bootstrap.less
+++ b/assets/bootstrap.less
@@ -4,6 +4,7 @@
   outline: none;
 
   &-nav-container {
+    font-size: 14px;
     white-space: nowrap;
     border-bottom: 1px solid #ddd;
     margin-bottom: 10px;
@@ -48,7 +49,7 @@
 
     .@{prefixClass}-tab {
       float: left;
-      margin-bottom: -4px;
+      margin-bottom: -5px;
       position: relative;
       display: block;
 
