--- a/assets/index.less
+++ b/assets/index.less
@@ -2,7 +2,7 @@
 
 @easing-in-out: cubic-bezier(0.35, 0, 0.25, 1);
 
-@effect-duration: .5s;
+@effect-duration: .3s;
 
 .@{prefixClass} {
   outline: none;
@@ -22,18 +22,18 @@
     z-index: 1;
     position: absolute;
     left: 0;
-    bottom: 0px;
+    bottom: 0;
     box-sizing: border-box;
     height: 4px;
     margin-top: -3px;
     background-color: #3fc7fa;
     transform: scaleX(1);
     transform-origin: 0 0;
-    &-transition-right {
+    &-transition-forward {
       transition: right 0.3s @easing-in-out,
       left 0.3s @easing-in-out 0.3s * 0.3;
     }
-    &-transition-left {
+    &-transition-backward {
       transition: right 0.3s @easing-in-out 0.3s * 0.3,
       left 0.3s @easing-in-out;
     }
@@ -76,7 +76,7 @@
       text-align: center;
       text-transform: none;
       -webkit-font-smoothing: antialiased;
-      -webkit-text-stroke-width: 0px;
+      -webkit-text-stroke-width: 0;
       -moz-osx-font-smoothing: grayscale;
       font-family: sans-serif;
 
@@ -184,17 +184,17 @@
     overflow: hidden;
   }
 
-  &-effect-left-enter {
+  &-slide-horizontal-backward-enter {
     transform: translateX(-100%);
 
   }
 
-  &-effect-left-enter&-effect-left-enter-active {
+  &-slide-horizontal-backward-enter&-slide-horizontal-backward-enter-active {
     transform: translateX(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
-  &-effect-left-leave {
+  &-slide-horizontal-backward-leave {
     position: absolute;
     top: 0;
     left: 0;
@@ -203,21 +203,21 @@
     transform: translateX(0);
   }
 
-  &-effect-left-leave&-effect-left-leave-active {
+  &-slide-horizontal-backward-leave&-slide-horizontal-backward-leave-active {
     transform: translateX(100%);
     transition: transform @effect-duration @easing-in-out;
   }
 
-  &-effect-right-enter {
+  &-slide-horizontal-forward-enter {
     transform: translateX(100%);
   }
 
-  &-effect-right-enter&-effect-right-enter-active {
+  &-slide-horizontal-forward-enter&-slide-horizontal-forward-enter-active {
     transform: translateX(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
-  &-effect-right-leave {
+  &-slide-horizontal-forward-leave {
     position: absolute;
     transform: translateX(0);
     top: 0;
@@ -226,7 +226,7 @@
     bottom: 0;
   }
 
-  &-effect-right-leave&-effect-right-leave-active {
+  &-slide-horizontal-forward-leave&-slide-horizontal-forward-leave-active {
     transform: translateX(-100%);
     transition: transform @effect-duration @easing-in-out;
   }
