support tabPosition. Fixes #10 #11

--- a/assets/bootstrap.less
+++ b/assets/bootstrap.less
@@ -1,86 +1,7 @@
 @prefixClass: rc-tabs;
 
-.@{prefixClass} {
-  outline: none;
-
-  &-nav-container {
-    line-height: 1.42857143;
-    font-size: 14px;
-    white-space: nowrap;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 10px;
-  }
-
-  &-tab-prev, &-tab-next {
-    display: none;
-  }
-
-  &-nav {
-    box-sizing: border-box;
-    padding-left: 0;
-    list-style: none;
-    margin-top: 0;
-    display: inline-block;
-
-    &:before, &:after {
-      display: table;
-      content: " ";
-    }
-
-    &:after {
-      clear: both;
-    }
-
-    div.@{prefixClass}-tab-active {
-      > a, > a:hover, > a:focus {
-        color: #555;
-        cursor: default;
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-bottom-color: transparent;
-        text-decoration: none;
-      }
-    }
-
-    div.@{prefixClass}-tab-disabled {
-      pointer-events: none;
-      cursor: default;
-      color: #ccc;
-    }
-
-    .@{prefixClass}-tab {
-      float: left;
-      margin-bottom: -6px;
-      position: relative;
-      display: block;
-
-      > a {
-        margin-right: 2px;
-        border: 1px solid transparent;
-        border-radius: 4px 4px 0 0;
-        text-decoration: none;
-        position: relative;
-        display: block;
-        padding: 10px 15px;
-      }
-
-      > a:hover {
-        border-color: #eee #eee #ddd;
-        cursor: pointer;
-      }
-
-      > a:hover, > a:focus {
-        text-decoration: none;
-        background-color: #eee;
-      }
-    }
-  }
-
-  &-tabpane-hidden {
-    display: none;
-  }
-
-  &-ink-bar {
-    display: none;
-  }
-}
+@import "bootstrap/common";
+@import "bootstrap/top";
+@import "bootstrap/bottom";
+@import "bootstrap/left";
+@import "bootstrap/right";
