--- a/assets/index/anim.less
+++ b/assets/index/anim.less
@@ -1,6 +1,7 @@
 .@{prefixClass} {
 
   &-slide-horizontal-backward-enter {
+    display: block !important;
     transform: translateX(-100%);
 
   }
@@ -11,6 +12,7 @@
   }
 
   &-slide-horizontal-backward-leave {
+    display: block !important;
     position: absolute;
     top: 0;
     left: 0;
@@ -25,6 +27,7 @@
   }
 
   &-slide-horizontal-forward-enter {
+    display: block !important;
     transform: translateX(100%);
   }
 
@@ -34,6 +37,7 @@
   }
 
   &-slide-horizontal-forward-leave {
+    display: block !important;
     position: absolute;
     transform: translateX(0);
     top: 0;
@@ -50,6 +54,7 @@
   /*slide*/
 
   &-slide-vertical-backward-enter {
+    display: block !important;
     transform: translateY(-100%);
 
   }
@@ -60,6 +65,7 @@
   }
 
   &-slide-vertical-backward-leave {
+    display: block !important;
     position: absolute;
     top: 0;
     left: 0;
@@ -74,6 +80,7 @@
   }
 
   &-slide-vertical-forward-enter {
+    display: block !important;
     transform: translateY(100%);
   }
 
@@ -83,6 +90,7 @@
   }
 
   &-slide-vertical-forward-leave {
+    display: block !important;
     position: absolute;
     transform: translateY(0);
     top: 0;
