fix scroll padding. Fixes #10

--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -5,9 +5,12 @@
 
   &-bottom &-nav-container {
     width: 100%;
+    border-top: 1px solid #f3f3f3;
+  }
+
+  &-bottom &-nav-container-scrolling {
     padding-left: 32px;
     padding-right: 32px;
-    border-top: 1px solid #f3f3f3;
   }
 
   &-bottom &-nav-scroll {
@@ -67,7 +70,6 @@
   &-bottom &-nav &-tab {
     float: left;
     height: 100%;
-    padding: 16px 20px;
     margin-right: 30px;
   }
 }
