--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -6,9 +6,12 @@
   &-left &-nav-container {
     float: left;
     margin-right: 10px;
+    border-right: 1px solid #f3f3f3;
+  }
+
+  &-left &-nav-container-scrolling {
     padding-top: 32px;
     padding-bottom: 32px;
-    border-right: 1px solid #f3f3f3;
   }
 
   &-left &-nav-wrap {
