--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -6,9 +6,12 @@
   &-right &-nav-container {
     float: right;
     margin-left: 10px;
+    border-left: 1px solid #f3f3f3;
+  }
+
+  &-right &-nav-container-scrolling {
     padding-top: 32px;
     padding-bottom: 32px;
-    border-left: 1px solid #f3f3f3;
   }
 
   &-right &-nav-wrap {
