--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -5,9 +5,12 @@
 
   &-top &-nav-container {
     width: 100%;
+    border-bottom: 1px solid #f3f3f3;
+  }
+
+  &-top &-nav-container-scrolling {
     padding-left: 32px;
     padding-right: 32px;
-    border-bottom: 1px solid #f3f3f3;
   }
 
   &-top &-nav-scroll {
