--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -39,8 +39,10 @@
 
   &-bottom &-tab-prev {
     left: 0;
-    transform: rotate(180deg);
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+    &-icon {
+      transform: rotate(180deg);
+      filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
+    }
     &-icon:before {
       content: "\e651";
     }
@@ -50,6 +52,8 @@
     margin-right: -2px;
     width: 32px;
     height: 100%;
+    top:0;
+    text-align: center;
   }
 
   &-bottom &-ink-bar {
