--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -18,7 +18,7 @@
     height: 100%;
   }
 
-  &-left  &-content {
+  &-left &-content {
     height: 100%;
   }
 
@@ -33,6 +33,7 @@
   &-left &-tab-prev, &-left &-tab-next {
     margin-top: -2px;
     height: 32px;
+    line-height: 32px;
     width: 100%;
     display: block;
     text-align: center;
@@ -40,8 +41,10 @@
 
   &-left &-tab-next {
     bottom: 0;
-    transform: rotate(90deg);
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+    &-icon {
+      transform: rotate(90deg);
+      filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+    }
     &-icon:before {
       content: "\e651";
     }
@@ -49,8 +52,10 @@
 
   &-left &-tab-prev {
     top: 2px;
-    transform: rotate(270deg);
-    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    &-icon {
+      transform: rotate(270deg);
+      filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+    }
     &-icon:before {
       content: "\e651";
     }
