support dynamic add and remove

--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -3,8 +3,7 @@
     border-top: 2px solid #f3f3f3;
   }
 
-  &-bottom &-nav-container {
-    width: 100%;
+  &-bottom &-tabs-bar {
     border-top: 1px solid #f3f3f3;
   }
 
