--- a/assets/index/top.less
+++ b/assets/index/top.less
@@ -3,8 +3,7 @@
     border-bottom: 2px solid #f3f3f3;
   }
 
-  &-top &-nav-container {
-    width: 100%;
+  &-top &-tabs-bar {
     border-bottom: 1px solid #f3f3f3;
   }
 
