--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -3,7 +3,7 @@
     border-left: 2px solid #f3f3f3;
   }
 
-  &-right &-nav-container {
+  &-right &-tabs-bar {
     float: right;
     margin-left: 10px;
     border-left: 1px solid #f3f3f3;
