--- a/assets/index/bottom.less
+++ b/assets/index/bottom.less
@@ -32,18 +32,14 @@
     right: 2px;
 
     &-icon:before {
-      content: "\e651";
+      content: ">";
     }
   }
 
   &-bottom &-tab-prev {
     left: 0;
-    &-icon {
-      transform: rotate(180deg);
-      filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-    }
     &-icon:before {
-      content: "\e651";
+      content: "<";
     }
   }
 
