--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -46,7 +46,7 @@
       filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
     }
     &-icon:before {
-      content: "\e651";
+      content: ">";
     }
   }
 
@@ -57,7 +57,7 @@
       filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     }
     &-icon:before {
-      content: "\e651";
+      content: ">";
     }
   }
 
