--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -42,7 +42,7 @@
       filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
     }
     &-icon:before {
-      content: "\e651";
+      content: ">";
     }
   }
 
@@ -53,7 +53,7 @@
       filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
     }
     &-icon:before {
-      content: "\e651";
+      content: ">";
     }
   }
 
