--- a/examples/common.css
+++ b/examples/common.css
@@ -3,13 +3,6 @@
   box-sizing: border-box;
   position: relative;
 }
-@font-face {
-  font-family: 'iconfont';
-  src: url('//at.alicdn.com/t/font_1429685559_5814753.eot');
-  /* IE9*/
-  src: url('//at.alicdn.com/t/font_1429685559_5814753.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('//at.alicdn.com/t/font_1429685559_5814753.woff') format('woff'), /* chrome、firefox */ url('//at.alicdn.com/t/font_1429685559_5814753.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/ url('//at.alicdn.com/t/font_1429685559_5814753.svg#iconfont') format('svg');
-  /* iOS 4.1- */
-}
 .rc-tabs-ink-bar {
   z-index: 1;
   position: absolute;
@@ -63,7 +56,6 @@
 .rc-tabs-tab-prev-icon:before,
 .rc-tabs-tab-next-icon:before {
   display: block;
-  font-family: "iconfont" !important;
 }
 .rc-tabs-tab-btn-disabled {
   cursor: default;
@@ -298,7 +290,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 .rc-tabs-left .rc-tabs-tab-next-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-left .rc-tabs-tab-prev {
   top: 2px;
@@ -310,7 +302,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 .rc-tabs-left .rc-tabs-tab-prev-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-left .rc-tabs-ink-bar {
   width: 2px;
@@ -368,7 +360,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
 .rc-tabs-right .rc-tabs-tab-next-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-right .rc-tabs-tab-prev {
   top: 2px;
@@ -380,7 +372,7 @@
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 }
 .rc-tabs-right .rc-tabs-tab-prev-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-right .rc-tabs-content {
   height: 100%;
@@ -427,19 +419,13 @@
   right: 2px;
 }
 .rc-tabs-bottom .rc-tabs-tab-next-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-bottom .rc-tabs-tab-prev {
   left: 0;
 }
-.rc-tabs-bottom .rc-tabs-tab-prev-icon {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-}
 .rc-tabs-bottom .rc-tabs-tab-prev-icon:before {
-  content: "\e651";
+  content: "<";
 }
 .rc-tabs-bottom .rc-tabs-tab-prev,
 .rc-tabs-bottom .rc-tabs-tab-next {
@@ -494,19 +480,13 @@
   right: 2px;
 }
 .rc-tabs-top .rc-tabs-tab-next-icon:before {
-  content: "\e651";
+  content: ">";
 }
 .rc-tabs-top .rc-tabs-tab-prev {
   left: 0;
 }
-.rc-tabs-top .rc-tabs-tab-prev-icon {
-  -webkit-transform: rotate(180deg);
-      -ms-transform: rotate(180deg);
-          transform: rotate(180deg);
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=2);
-}
 .rc-tabs-top .rc-tabs-tab-prev-icon:before {
-  content: "\e651";
+  content: "<";
 }
 .rc-tabs-top .rc-tabs-tab-prev,
 .rc-tabs-top .rc-tabs-tab-next {
