update antd demo

--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -1,6 +1,7 @@
 .@{prefixClass} {
   &-left {
     border-right: 2px solid #f3f3f3;
+    height: 100%;
   }
 
   &-left &-tabs-bar {
@@ -20,6 +21,14 @@
 
   &-left &-content {
     height: 100%;
+    & > span {
+      height: 100%;
+      display: block;
+      & .@{prefixClass}-tabpane{
+        height: 100%;
+        overflow-y: auto;
+      }
+    }
   }
 
   &-left &-nav-scroll {
