--- a/assets/index/right.less
+++ b/assets/index/right.less
@@ -1,6 +1,7 @@
 .@{prefixClass} {
   &-right {
     border-left: 2px solid #f3f3f3;
+    height: 100%;
   }
 
   &-right &-tabs-bar {
@@ -59,6 +60,14 @@
 
   &-right &-content {
     height: 100%;
+    & > span {
+      height: 100%;
+      display: block;
+      & .@{prefixClass}-tabpane{
+        height: 100%;
+        overflow-y: auto;
+      }
+    }
   }
 
   &-right &-ink-bar {
