add dynamic height

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -126,5 +126,12 @@
   &-content {
     position: relative;
     overflow: hidden;
+    transition: height .3s;
+    &>span{
+      overflow: inherit;
+    }
+  }
+  &-tabpane{
+    overflow: inherit;
   }
 }
