--- a/assets/index/anim.less
+++ b/assets/index/anim.less
@@ -12,7 +12,7 @@
   }
 
   &-slide-horizontal-backward-leave {
-    
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -37,7 +37,7 @@
   }
 
   &-slide-horizontal-forward-leave {
-    
+    overflow: hidden;
     position: absolute;
     transform: translateX(0);
     top: 0;
@@ -65,7 +65,7 @@
   }
 
   &-slide-vertical-backward-leave {
-    
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -90,7 +90,7 @@
   }
 
   &-slide-vertical-forward-leave {
-    
+    overflow: hidden;
     position: absolute;
     transform: translateY(0);
     top: 0;
