--- a/examples/common.css
+++ b/examples/common.css
@@ -135,6 +135,7 @@
           transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-horizontal-backward-leave {
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -164,6 +165,7 @@
           transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-horizontal-forward-leave {
+  overflow: hidden;
   position: absolute;
   -webkit-transform: translateX(0);
       -ms-transform: translateX(0);
@@ -193,6 +195,7 @@
           transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-backward-leave {
+  overflow: hidden;
   position: absolute;
   top: 0;
   left: 0;
@@ -222,6 +225,7 @@
           transition: transform 0.3s cubic-bezier(0.35, 0, 0.25, 1);
 }
 .rc-tabs-slide-vertical-forward-leave {
+  overflow: hidden;
   position: absolute;
   -webkit-transform: translateY(0);
       -ms-transform: translateY(0);
