--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -106,7 +106,7 @@
       display: block;
 
       > .@{prefixClass}-tab-inner {
-        transition: color 0.3s @easing-in-out;
+        transition: color @effect-duration @easing-in-out;
         padding: 8px 20px;
         font-weight: 500;
         display: inline-block;
