fix chrome render

--- a/assets/index/anim.less
+++ b/assets/index/anim.less
@@ -7,7 +7,7 @@
   }
 
   &-slide-horizontal-backward-enter&-slide-horizontal-backward-enter-active {
-    transform: translateX(0);
+    transform: translateX(0) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -22,7 +22,7 @@
   }
 
   &-slide-horizontal-backward-leave&-slide-horizontal-backward-leave-active {
-    transform: translateX(100%);
+    transform: translateX(100%) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -32,7 +32,7 @@
   }
 
   &-slide-horizontal-forward-enter&-slide-horizontal-forward-enter-active {
-    transform: translateX(0);
+    transform: translateX(0) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -47,7 +47,7 @@
   }
 
   &-slide-horizontal-forward-leave&-slide-horizontal-forward-leave-active {
-    transform: translateX(-100%);
+    transform: translateX(-100%) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -60,7 +60,7 @@
   }
 
   &-slide-vertical-backward-enter&-slide-vertical-backward-enter-active {
-    transform: translateY(0);
+    transform: translateY(0) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -75,7 +75,7 @@
   }
 
   &-slide-vertical-backward-leave&-slide-vertical-backward-leave-active {
-    transform: translateY(100%);
+    transform: translateY(100%) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
@@ -85,7 +85,7 @@
   }
 
   &-slide-vertical-forward-enter&-slide-vertical-forward-enter-active {
-    transform: translateY(0);
+    transform: translateY(0) translateZ(0);
     transition: transform @effect-duration @easing-in-out;
   }
 
