--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -84,6 +84,8 @@
       > .@{prefixClass}-tab-inner, > .@{prefixClass}-tab-inner:hover {
         color: #3fc7fa;
         cursor: default;
+        // fix chrome render
+        transform: translateZ(0);
       }
     }
 
