fix keydown. Fixes #14

--- a/assets/index/common.less
+++ b/assets/index/common.less
@@ -1,7 +1,10 @@
 .@{prefixClass} {
-  outline: none;
   box-sizing: border-box;
   position: relative;
+
+  &-tabs-bar {
+    outline: none;
+  }
 
   &-ink-bar {
     z-index: 1;
