--- a/assets/index/left.less
+++ b/assets/index/left.less
@@ -3,7 +3,7 @@
     border-right: 2px solid #f3f3f3;
   }
 
-  &-left &-tabs-bar {
+  &-left &-bar {
     float: left;
     margin-right: 10px;
     border-right: 1px solid #f3f3f3;
